--- a/leads_tracker/style.css
+++ b/leads_tracker/style.css
@@ -25,8 +25,9 @@ button{
     border-radius: 5px;
 }
 #clear-btn{
-    background-color: #91968f60 ;
-    color: rgb(88, 86, 86);
+    background-color: white ;
+    border: 2px solid #5f9341;
+    color: #5f9341;
 }
 ul {
     padding-left: 0;
